crates/ruff_python_parser/tests/snapshots/invalid_syntax@t_string_lambda_without_parentheses.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/t_string_lambda_without_parentheses.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..61,
        body: [
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 44..60,
                    value: TString(
                        ExprTString {
                            node_index: AtomicNodeIndex(..),
                            range: 44..60,
                            value: TStringValue {
                                inner: Single(
                                    TString {
                                        range: 44..60,
                                        node_index: AtomicNodeIndex(..),
                                        elements: [
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 46..56,
                                                    node_index: AtomicNodeIndex(..),
                                                    expression: Lambda(
                                                        ExprLambda {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 47..56,
                                                            parameters: Some(
                                                                Parameters {
                                                                    range: 54..55,
                                                                    node_index: AtomicNodeIndex(
                                                                        0,
                                                                    ),
                                                                    posonlyargs: [],
                                                                    args: [
                                                                        ParameterWithDefault {
                                                                            range: 54..55,
                                                                            node_index: AtomicNodeIndex(..),
                                                                            parameter: Parameter {
                                                                                range: 54..55,
                                                                                node_index: AtomicNodeIndex(..),
                                                                                name: Identifier {
                                                                                    id: Name("x"),
                                                                                    range: 54..55,
                                                                                    node_index: AtomicNodeIndex(..),
                                                                                },
                                                                                annotation: None,
                                                                            },
                                                                            default: None,
                                                                        },
                                                                    ],
                                                                    vararg: None,
                                                                    kwonlyargs: [],
                                                                    kwarg: None,
                                                                },
                                                            ),
                                                            body: Name(
                                                                ExprName {
                                                                    node_index: AtomicNodeIndex(..),
                                                                    range: 56..56,
                                                                    id: Name(""),
                                                                    ctx: Invalid,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 56..58,
                                                    node_index: AtomicNodeIndex(..),
                                                    value: " x",
                                                },
                                            ),
                                        ],
                                        flags: TStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"target-version": "3.14"}
2 | t"{lambda x: x}"
  |             ^^ Syntax Error: Expected an expression
  |


  |
1 | # parse_options: {"target-version": "3.14"}
2 | t"{lambda x: x}"
  |    ^^^^^^^^^ Syntax Error: t-string: lambda expressions are not allowed without parentheses
  |


  |
1 | # parse_options: {"target-version": "3.14"}
2 | t"{lambda x: x}"
  |             ^^ Syntax Error: t-string: expecting '}'
  |


  |
1 | # parse_options: {"target-version": "3.14"}
2 | t"{lambda x: x}"
  |               ^ Syntax Error: Expected an element of or the end of the t-string
  |
